# pitch2synth-rs

./: Cargo.toml  LICENSE  README.md  out.txt
src/: main.rs  midihandler.rs  pitchdetect.rs  test.rs
src/pitchdetect/: goertzel.rs
