[package]
name = "pitch2synth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26.1"
midly = "0.5.3"
midir = "0.9.1"
spmc = "0.3.0"
ndarray = "0.15.6"
pitch-detection = "0.3.0"#pyin = "1.0.2"
cpal = "0.15.1"
rand = "0.8.5"
closure = "0.3.0"
ringbuffer = "0.12.0"